[gd_scene load_steps=30 format=3 uid="uid://bbnwcbynupn04"]

[ext_resource type="Script" uid="uid://kslnwtv52kg8" path="res://scripts/hammer_enemy.gd" id="1_ba3fx"]
[ext_resource type="Texture2D" uid="uid://bs6wcnccishxw" path="res://assets/sprites/Soldier.png" id="2_8swxs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8swxs"]
size = Vector2(12, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6re7"]
atlas = ExtResource("2_8swxs")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpvap"]
atlas = ExtResource("2_8swxs")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_didp5"]
atlas = ExtResource("2_8swxs")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk5gn"]
atlas = ExtResource("2_8swxs")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n78w1"]
atlas = ExtResource("2_8swxs")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vhbi"]
atlas = ExtResource("2_8swxs")
region = Rect2(500, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7yie"]
atlas = ExtResource("2_8swxs")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mybd"]
atlas = ExtResource("2_8swxs")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dkx0"]
atlas = ExtResource("2_8swxs")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pceuh"]
atlas = ExtResource("2_8swxs")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgcli"]
atlas = ExtResource("2_8swxs")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi88i"]
atlas = ExtResource("2_8swxs")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b037i"]
atlas = ExtResource("2_8swxs")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q25gt"]
atlas = ExtResource("2_8swxs")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h0ei"]
atlas = ExtResource("2_8swxs")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_njlo3"]
atlas = ExtResource("2_8swxs")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdprn"]
atlas = ExtResource("2_8swxs")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbc8k"]
atlas = ExtResource("2_8swxs")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqd3e"]
atlas = ExtResource("2_8swxs")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvivm"]
atlas = ExtResource("2_8swxs")
region = Rect2(700, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_emio6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6re7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpvap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_didp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk5gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n78w1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vhbi")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7yie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mybd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dkx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pceuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgcli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi88i")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b037i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q25gt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7h0ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njlo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdprn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbc8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqd3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvivm")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ba3fx"]
size = Vector2(20, 1)

[sub_resource type="Animation" id="Animation_8swxs"]
length = 0.001

[sub_resource type="Animation" id="Animation_ba3fx"]
resource_name = "attack"
length = 0.8
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.73333335),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hit_player"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i6re7"]
_data = {
&"RESET": SubResource("Animation_8swxs"),
&"attack": SubResource("Animation_ba3fx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i6re7"]

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_ba3fx")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(13, -11)
shape = SubResource("RectangleShape2D_8swxs")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["enemies"]]
position = Vector2(-2, -8)
sprite_frames = SubResource("SpriteFrames_emio6")
animation = &"attack"
autoplay = "idle"
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_ba3fx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i6re7")
}

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-3, -11)
shape = SubResource("RectangleShape2D_i6re7")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
